css/style.css
@font-face {
    font-family: Lato;
    src: url(../fonts/Lato-Regular.ttf);
}

@font-face {
    font-family: Lato-thin;
    src: url(../fonts/Lato-Thin.ttf);
}

@font-face {
    font-family: Lato-Hairline;
    src: url(../fonts/Lato-Hairline.ttf);
}

@font-face {
    font-family: Lato-Bold;
    src: url(../fonts/Lato-Bold.ttf);
}

body {
  padding-bottom: 30px;
}

a:hover {
  text-decoration: none;
}

.navtop {
  background-color: #00303f;
  padding-top: 20px;
}

.navbar li {
  display: inline-block;
  margin-right: 50px;
  font-size: 20px;
  margin-top: 0px;
  padding-top: 0px;
  color: #ffffff;
  font-family: Lato-thin

}

.navbar li:hover {
  color: #7A9D96;
}


.navbar {
  min-height: 0px;
  margin-bottom: 0px;
  float: right;
}

.navbarline {
  border-bottom: 1px solid #D1DDCE;
  margin-top: 0px;
  padding-top: 0px;
  margin-bottom: 20px;
}

.arrow-left {
  width: 0;
  height: 0;
  border-top: 7px solid transparent;
  border-bottom: 7px solid transparent;
  border-right:7px solid #D1DDCE;
  position: absolute;
  left: -7px;
    top: -6px;
}

 h1 {
  color: #ffffff;
  background-color: #00303f;
  font-family: Lato-thin;
  font-weight: lighter;
  padding: 10px;
  max-width: 500px;
  text-align: center;
  margin-bottom: 60px;

}

.styleguide h2, h3, h4, h5, h6{
  color: #000000;
  font-family: Lato;
}



.styleguide h1 {
  color: #000000;
  font-family: Lato-thin;
  background-color: inherit;
  font-weight: bold;
  padding: 0px;
  text-align: left;
  margin: 0px;
  font-weight: inherit;

}

.specialHeaders h1 {
  color: #ffffff;
  background-color: #00303f;
  font-family: Lato-thin;
  font-weight: lighter;
  padding: 10px;
  max-width: 500px;
  text-align: center;
  margin: 20px 0px;

}


table td:first-child a {
  color: #ffffff;
  padding: 20px 18px;
  background-color: #00303f;
  position: relative;
  top: 27px;
  margin-right: 20px;

}



table td:nth-child(2) img {
  width: 115px;
  height: auto;
  border-radius: 50%;
  vertical-align: middle;
  position: relative;
  border: solid 4px #DCAE1D;


}

table td:nth-child(2) {
  background-color: #CAE4DB;
  padding: 0px;
  border-radius: 50%;
  width: 55px;
  position: relative;
  top: 27px;
}

table td:nth-child(2) img:hover {
  border: 5px solid #00303f;
  opacity: 0.5;
  position: relative;

}

table td:nth-child(3) a {
font-family: Lato;
color: #00303f;
font-size: 36px;
margin-left: 15px;
}

.innerInfo td:nth-child(2) {
font-family: Lato-thin;
color: #0088a8;
font-size: 20px;
background-color: inherit;
}

.innerInfo td:nth-child(3) a {
font-family: Lato-thin;
color: #0088a8;
font-size: 20px;
background-color: inherit;

}


.table>tbody>tr>td {
  border-top: none;
  vertical-align: middle;
  padding: 0px;

}
 tr {
  padding-bottom: 60px;

}

table {
  border-spacing: 0px;
  border-color:inherit;
  display: block;
}

.title {
  width: 9%;
  display: inline-block;
  margin-right: 6px;
  vertical-align: top;
}

.firstname {
  width: 44%;
  display: inline-block;
  margin-right: 6px;
  vertical-align: top;
}

.lastname {
  width: 44%;
  display: inline-block;
  vertical-align: top;
}

.address {
  width: 56%;
  display: inline-block;
  margin-right: 6px;
}

.city {
  width: 30%;
  display: inline-block;
  margin-right: 6px;
}

.state {
  width: 11%;
  display: inline-block;
}

.zipcode {
  width: 49%;
  display: inline-block;
  margin-right: 7px;
}

.phone {
  width: 49%;
  display: inline-block;
}

.specialHeaders h2 {
  font-family: Lato;
  color: #CAE4DB;
  font-size: 36px;
}

.specialHeaders h3 {
  font-family: Lato-thin;
  color: #A7B3A5;
  font-size: 20px;

}

.specialHeaders h4 {
  color: red;
  margin-bottom: 40px;
}


.inputTitles  {

  font-family: Lato-Bold;
  font-size: 18px;
  margin-bottom: 0px;


}
.paragraphs {
  font-family: Lato;
  font-size: 18px;
  margin-bottom: 10px;
}

.light-text {
  font-family: Lato-Hairline;
  font-size: 16px;
  color: grey;
  letter-spacing: 0.05em;
  margin-bottom: 10px;
}

.lead-text {
  font-family: lato;
  font-size: 22px;
  font-weight: 800;
  margin-bottom: 10px;
}

.color1 {

  background-color: #CAE4DB;
  width: 100px;
  height: 100px;
  display: inline-block;
  margin-bottom: 40px;
}

.color1 p, .color2 p, .color3 p, .color4 p, .color5 p, .color6 p, .color7 p, .color9 p, .color10 p, .color11 p, .color12 p {
  position: relative;
  top: 100px;
  font-family: Lato-thin;
  font-size: 12px;
}

.color8 p {
  position: relative;
  top: 100px;
  font-family: Lato-thin;
  font-size: 11px;
}


.color2 {

  background-color: #7A9D96;
  width: 100px;
  height: 100px;
  display: inline-block;
  margin-bottom: 40px;
}

.color3 {

  background-color: #319B86;
  width: 100px;
  height: 100px;
  display: inline-block;
  margin-bottom: 40px;
}

.color4 {
  margin-bottom: 40px;
  background-color: #659ba8;
  width: 100px;
  height: 100px;
  display: inline-block;
}

.color5 {
  margin-bottom: 40px;
  background-color: #0088a8;
  width: 100px;
  height: 100px;
  display: inline-block;
}

.color6 {
  margin-bottom: 40px;
  background-color: #00303f;
  width: 100px;
  height: 100px;
  display: inline-block;
}

.color7 {
  margin-bottom: 40px;
  background-color: #DBC179;
  width: 100px;
  height: 100px;
  display: inline-block;
}

.color8 {
  margin-bottom: 40px;
  background-color: #DCAE1D;
  width: 100px;
  height: 100px;
  display: inline-block;
}

.color9 {
  margin-bottom: 40px;
  background-color: #BA8900;
  width: 100px;
  height: 100px;
  display: inline-block;
}

.color10 {
  margin-bottom: 40px;
  background-color: #ffffff;
  width: 100px;
  height: 100px;
  display: inline-block;
  border: #ccc thin solid;
}

.color11 {
  margin-bottom: 40px;
  background-color: #999999;
  width: 100px;
  height: 100px;
  display: inline-block;
}

.color12 {
  margin-bottom: 40px;
  background-color: #000000;
  width: 100px;
  height: 100px;
  display: inline-block;
}

.tableContainer {
  background-color: #ffffff;
}

.tableStyle {
  display: block;
  padding-bottom: 30px;
  padding-top: 10px;
}

.buttons {
  padding: 50px 0px;
}

.regularButton {
  border: none;
  background-color: #659ba8;
  color: #ffffff;
  padding: 10px 20px;
  border-radius: 5px;
  font-family: Lato;
  font-size: 12px;
  font-weight: 800;
  border-bottom: 3px solid #00303f;
  display: block;
  margin-top: 20px;
}

.regularButton:hover {
  background-color: #00303f;
  transition: all 0.4s ease-in-out;
  color: #ffffff;
  display: block;
}

.smallButton, .smallButtonCreate {
  border: none;
  background-color: #659ba8;
  color: #ffffff;
  border-radius: 5px;
  font-family: Lato-thin;
  font-size: 12px;
  font-weight: 800;
  border-bottom: 3px solid #00303f;
  padding: 5px;
  display: block;
  margin-top: 0px;
}

.smallButton:hover, .smallButtonCreate:hover {
  background-color: #00303f;
  transition: all 0.4s ease-in-out;
  color: #ffffff;
}

.largeButton {
  border: none;
  background-color: #659ba8;
  color: #ffffff;
  border-radius: 5px;
  font-family: Lato;
  font-size: 14px;
  font-weight: 800;
  border-bottom: 3px solid #00303f;
  padding: 20px 35px;
  display: block;
  margin-top: 20px;

}

.largeButton:hover {
  background-color: #00303f;
  transition: all 0.4s ease-in-out;
  color: #ffffff;
}

.deleteButton {
  border: none;
  background-color: #ffffff;
  color: #00303f;
  border-radius: 5px;
  font-family: Lato;
  font-size: 14px;
  font-weight: 800;
  border: 3px solid #00303f;
  padding: 15px 30px;
  display: block;
  margin-top: 20px;

}

.deleteButton:hover {
  background-color: #319B86;
  transition: all 0.4s ease-in-out;
  color: #ffffff;
}

.inputField {
  padding: 10px 50px 10px 8px;
  font-family: Lato;
  font-size: 16px;
  border: 2px solid #7A9D96;
  border-radius: 4px;
  margin-top: 5px;
}

.inputField:focus {
  border-color: #CAE4DB;
  outline-color: #CAE4DB;
}

.textareaInput {
  font-family: Lato;
  font-size: 16px;
  display: block;
  border: 2px solid #7A9D96;
  border-radius: 4px;
  margin-top: 5px;
  width: 100%;
  height: 100px;
  padding: 10px 8px;
}

.textareaInput:focus {
  border-color: #CAE4DB;
  outline-color: #CAE4DB;
}

.selectInput {
  font-family: Lato;
  font-size: 16px;
  display: block;
  border: 2px solid #7A9D96;
  border-radius: 4px;
  margin: 5px 0px;
  width: 100%;
  height: 50px;
}

.selectInputEdit {
    font-family: Lato;
    font-size: 16px;
    display: block;
    border: 2px solid #7A9D96;
    border-radius: 4px;
    margin: 5px 0px;
}

.selectInput:focus {
  border-color: #CAE4DB;
  outline-color: #CAE4DB;
}

.table>tbody+tbody {
  border-top: 0px;
}

.lists {
 width: 100%;
}

.imageChange {

  display: inline-block;
  max-width: 200px;
  padding: 10px 0px 10px 0px;
  margin-bottom: 25px;
  border-radius: 4px;
}

.imageChange img {
  border-radius: 5px;
  margin-bottom: 10px;
  border: 5px solid #DCAE1D;
}

.imageSave {
  margin-top: 10px;
}

.Lato-Hairline {
  font-family: Lato-Hairline;
  font-size: 28px;
}

.Lato-Thin {
  font-family: Lato-Thin;
  font-size: 28px;
}

.Lato {
  font-family: Lato;
  font-size: 28px;
}

.Lato-Bold {
  font-family: Lato-Bold;
  font-size: 28px;
}

.typography {
  margin-top: 20px;
}

.styleLists li {
  font-family: Lato-Hairline;
  font-size: 18px;
  color: #00303f;
  padding-top: 5px;
}

.styleLists {
  margin: 20px 0px;
}

.styleInputs input, .styleInputs textarea, .styleInputs select {
  margin-bottom: 20px;
}

.yellowMan  {
  border: 5px solid #DCAE1D;
  margin-bottom: 20px;
  border-radius: 5px;
}

.smallButtonCreate {
  margin: 20px 0px;
  display: inline-block;
}
/*Media Queries*/

@media screen and (max-width: 460px) {

  .navbar li {
    display: inline-block;
    margin-right: 0px;
    font-size: 20px;
    margin-top: 0px;
    padding-top: 10px;
    padding-right: 20px;
    color: #ffffff;
    font-family: Lato-thin

  }

  h1 {
    font-size: 30px;
  }

  table td:first-child a {
    color: #ffffff;
    padding: 15px 13px;
    background-color: #00303f;
    position: relative;
    top: 27px;
    margin-right: 10px;
    margin-left: 0px;

  }

  table td:nth-child(2) img {
    width: 95px;
  }

  table td:nth-child(2) {
  background-color: #ffffff;
  }

  table td:nth-child(3) a {
  font-family: Lato;
  color: #00303f;
  font-size: 28px;
  margin-left: 15px;
  }

}

